samples/_failures_safe/1761096725_3a5f15_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_75ea2397.c: In function ‘main’:
./samples/SAFE/__tmp_75ea2397.c:148:24: error: missing terminating " character
  148 |                 printf("\n
      |                        ^~~
./samples/SAFE/__tmp_75ea2397.c:148:17: error: expected expression at end of input
  148 |                 printf("\n
      |                 ^~~~~~
./samples/SAFE/__tmp_75ea2397.c:148:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_75ea2397.c:148:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_75ea2397.c:148:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_75ea2397.c:148:17: error: expected declaration or statement at end of input
